# qtadmin

./: .gitignore  CHANGELOG-human.md  CHANGELOG.md  CLAUDE.md  Current-Progress.md  README.md  ROADMAP.md  pytest.ini
.github/workflows/: check.yml  dart-publish.yml  publish.yml
demo/: README.md  RUN_DEMO.md  run_demo.bat  run_demo.sh
doc/: api.md  architecture.md  entities.md  roadmap.md  security.md  services.md
docs/user-guide/: human.md
examples/: pyproject.toml
examples/human/: classifier.py  database.py  demo.py  seed.py
examples/human/models/: application.py  candidate.py  pending_queue.py  recruitment.py  talent.py
examples/human/routers/: applications.py  candidates.py  ingest.py  pipeline.py  pool.py  queue.py  recruitments.py
examples/human/schemas/: application.py  candidate.py  pending_queue.py  recruitment.py  talent.py
examples/human/services/: headcount.py  pipeline.py  pool.py
examples/human/static/: index.html
manifests/: qtadmin-mail-sender.service  qtadmin-provider.service
scripts/: install-services.sh  qtadmin  start-all.sh
src/cli/: pyproject.toml
src/cli/app/: cli.py
src/cli/app/human/: __init__.py  api_client.py  classifier.py  cli.py  config.py  lark_client.py  mail_sender.py  mail_sender_loop.py
src/hr-kanban/lib/screens/: pipeline_screen.dart  queue_screen.dart
src/provider/: pyproject.toml  run.sh
src/provider/app/: __main__.py
src/provider/app/human/: __init__.py  database.py  seed.py
src/provider/app/human/models/: __init__.py  (+10 more)
tests/human/: conftest.py  test_api.py  test_models.py  test_schemas.py
(+29 files in other folders)
