[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qtadmin-example"
version = "0.1.0"
description = "qtadmin HR demo example"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["human"]
